# threatflux-atlassian

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_TEMPLATE.md  SECURITY.md  action.Dockerfile  action.yml  deny.toml
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  docker.yml  release.yml  security.yml
crates/threatflux-atlassian-action/: Cargo.toml  README.md
crates/threatflux-atlassian-action/src/: config.rs  github.rs  jira.rs  lib.rs  main.rs  rules.rs
crates/threatflux-atlassian-action/tests/: action_cli.rs
crates/threatflux-atlassian-cli/: Cargo.toml  README.md
crates/threatflux-atlassian-cli/src/: main.rs
crates/threatflux-atlassian-sdk/: Cargo.toml  README.md
crates/threatflux-atlassian-sdk/examples/: jira_example.rs  remote_mcp_example.rs  ticket_management.rs
crates/threatflux-atlassian-sdk/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  remote_client.rs  types.rs
docs/: README_STANDARDS.md  TEMPLATE_ADAPTATION.md  USAGE.md
docs/internal/: MAINTAINER_GUIDE.md  RELEASE_OPERATIONS.md
examples/github-automation/: dependabot-high.yml
examples/workflows/: dependabot-jira-issues.yml
plans/: config-driven-jira-action-plan.md  openai-rust-sdk-workflow-diff.md  pre-commit-ci-parity-plan.md
