[workspace]
members = [
    "crates/threatflux-atlassian-sdk",
    "crates/threatflux-atlassian-cli",
    "crates/threatflux-atlassian-action",
]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/ThreatFlux/threatflux-atlassian"
homepage = "https://github.com/ThreatFlux/threatflux-atlassian"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
threatflux-atlassian-sdk = { path = "crates/threatflux-atlassian-sdk", version = "0.4.2" }
dotenvy = "0.15"
fluxencrypt = "0.5.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "query", "rustls"] }
regex = "1.12.2"
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
serial_test = "3.3.1"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-test = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
